<resources>
    <string name="app_name">skadoosh_qp</string>
    <string name="search_textview">SEARCH PROFILE</string>
    <string name="search_info">Voters Name</string>
    <string name="profile_view">VOTERS PROFILE</string>
    <string name="submit">SUBMIT</string>
    <string name="collect_data">COLLECT DATA</string>
    <string name="view_graphs">View Graphs</string>
    <string name="view_profile">View Information</string>
    <string name="barangay_tv">Pumili ng Barangay</string>
    <string name="precinct_tv">Pumili ng Presinto</string>
    <string name="votersname_tv">Pumili ng Botante</string>
    <string name="backbutton">BACK</string>
    <string name="graph_view">CITY/MUNICIPALITY GRAPH VIEW</string>
    <string name="generate_graph">GENERATE GRAPH</string>
    <string name="submit_data">UPLOAD TO SERVER</string>
    <string name="upload_data">Upload All Data</string>
    <string name="city_level_graph">CITY/MUNICIPALITY LEVEL GRAPH</string>
    <string name="barangay_level_graph">BARANGAY LEVEL GRAPH</string>
    <string name="precinct_level_graph">PRECINCT LEVEL GRAPH</string>
    <string name="missing_entry">GRAPH with MISSING ENTRY</string>
    <string name="barangay_graph_view">BARANGAY GRAPH VIEW</string>
    <string name="precinct_graph_view">PRECINCT GRAPH VIEW</string>
    <string name="generate_graph_with_missing_entry">Graph With Missing Entry</string>
    <string name="home">HOME</string>
    <string name="save">Save</string>
    <string name="voters_information">Voters Information</string>
    <string name="list_to_upload">Upload List</string>
    <string name="manage_data">MANAGE DATA</string>
    <string name="batch_file">Batch File</string>
    <string name="download">Download</string>
    <string name="upload_data_menu">UPLOAD DATA</string>
    <string name="download_batch_file">NEW BATCH FILE</string>
    <string name="end_canvassing">END CANVASSING</string>
    <string name="fullname_canvass">FULL NAME</string>
    <string name="close_canvassing">Close Canvassing</string>
    <string name="e_mail_canvass">E-MAIL ADDRESS</string>
    <string name="send_request">send request</string>
    <string name="generate_line_chart">GENERATE LINE CHART</string>
    <string name="download_data_menu">DOWNLOAD DATA</string>
    <string name="download_file">DOWNLOAD FILE</string>
    <string name="pumili_ng_municipality_city">PUMILI NG MUNICIPALITY / CITY</string>
    <string-array name="graph_column">
        <item>Congressman</item>
        <item>Mayor</item>
        <item>ViceMayor</item>
        <item>Kagawad</item>
    </string-array>
    <string-array name="questions">
        <item>PUMILI NG CONGRESSMAN ?</item>
        <item>PUMILI NG MAYOR ?</item>
        <item>PUMILI NG VICE MAYOR ?</item>
        <item>PUMILI NG MGA KAGAWAD ?</item>
    </string-array>
    <string-array name="choice_congressman">
        <item>BORDADO, Gabriel</item>
        <item>ROCO, Sulpicio</item>
        <item>VILLAFUERTE, Luis</item>
        <item>Undecided</item>
    </string-array>
    <string-array name="choice_mayor">
        <item>LEGACION, Nelson</item>
        <item>MENDOZA, Fortunato</item>
        <item>Undecided</item>
    </string-array>
    <string-array name="choice_vicemayor">
        <item>DE ASIS, Cecilia</item>
        <item>MIRANDA, Lito</item>
        <item>RIVA, Felix</item>
        <item>Undecided</item>
    </string-array>
    <string-array name="choice_kagawad">
        <item>ABONAL, Greg</item>
        <item>ALBEUS, Jess</item>
        <item>ARROYO, Mila</item>
        <item>BALDEMORO, Elmer</item>
        <item>CASTILLO, Vidal</item>
        <item>DEL CASTILLO, Badong</item>
        <item>DEL ROSARIO, Lito</item>
        <item>LAVADIA, June</item>
        <item>MACARAIG, Areiz</item>
        <item>PEREZ, Joe</item>
        <item>RANOLA, Sonny</item>
        <item>ROCO, Bernadette</item>
        <item>ROSALES, Ghiel</item>
        <item>SAN JUAN, Pedro</item>
        <item>SERGIO, Nathan</item>
        <item>TUAZON, Jose</item>
    </string-array>
    <string-array name="graph_district_column">
        <item>Governor</item>
        <item>ViceGovernor</item>
        <item>Congressman</item>
        <item>BoardMember</item>
        <item>Highest Education</item>
        <item>Annual HH Income</item>
        <item>Services on education</item>
        <item>Services on medical assistance</item>
        <item>Services on agriculture</item>
        <item>Services on cooperative</item>
    </string-array>
    <string-array name="graph_quezon_column">
        <item>Governor</item>
        <item>ViceGovernor</item>
        <item>Congressman</item>
        <item>Mayor</item>
        <item>ViceMayor</item>
        <item>BoardMember</item>
        <item>Highest Education</item>
        <item>Annual HH Income</item>
        <item>Services on education</item>
        <item>Services on medical assistance</item>
        <item>Services on agriculture</item>
        <item>Services on cooperative</item>
    </string-array>
    <string-array name="city_municipality">
        <item>Candelaria</item>
        <item>Dolores</item>
        <item>Lucena City</item>
        <item>San Antonio</item>
        <item>Sariaya</item>
        <item>Tiaong</item>
    </string-array>
    <string-array name="QuezProv_questions">
        <item>PUMILI NG GOVERNOR ?</item>
        <item>PUMILI NG VICE GOVERNOR ?</item>
        <item>PUMILI NG CONGRESSMAN ?</item>
        <item>SANGGUNIANG PANLALAWIGAN ?</item>
        <item>PUMILI NG MAYOR ?</item>
        <item>PUMILI NG PARTY LIST ?</item>
        <item>PHONE NUMBER OF VOTER</item>
    </string-array>
    <string-array name="QuezProv_ch_governor">
        <item></item>
        <item>ABUY, BENILDA FATIMA</item>
        <item>ALCALA, KULIT</item>
        <item>DATOR, SERAFIN</item>
        <item>PULGAR, SONY</item>
        <item>SUAREZ, DANNY</item>
        <item>VILLENA, DING</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_ch_vicegovernor">
        <item></item>
        <item>CAPINA, TEODORICO</item>
        <item>ESTACIO, GEOFFREY</item>
        <item>MALITE, ARCIE</item>
        <item>NANTES, SAM</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_ch_2ndcongressman">
        <item></item>
        <item>ALCALA, PROCY</item>
        <item>MASILANG, BOYET</item>
        <item>SENERES, CHRISTIAN</item>
        <item>SUAREZ, AMADEO</item>
        <item>SUAREZ, DAVID</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_lucena_ch_mayor">
        <item></item>
        <item>ALCALA, DONDON</item>
        <item>TALAGA, MON</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_sariaya_ch_mayor">
        <item></item>
        <item>DE LA ROCA, JUN</item>
        <item>GAYETA, MARCENG</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_candelaria_ch_mayor">
        <item></item>
        <item>BOONGALING, MACKY</item>
        <item>MALIWANAG, BONG</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_tiaong_ch_mayor">
        <item></item>
        <item>CASTILLO, ROMANO</item>
        <item>PREZA, RAMON</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_dolores_ch_mayor">
        <item></item>
        <item>CALAYAG, ORLAN</item>
        <item>MILAN, JR</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_sanantonio_ch_mayor">
        <item></item>
        <item>HERNANDEZ, RODANTE</item>
        <item>WAGAN, ERICK</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_lucena_ch_vicemayor">
        <item></item>
        <item>ALCANTARA, JOEMARK</item>
        <item>CASTILLO, PHILIP</item>
        <item>TALABONG, BONG</item>
        <item>TALAGA, MIKE</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_sariaya_ch_vicemayor">
        <item></item>
        <item>DE LA PENA, TEODY</item>
        <item>TOLENTINO, ALEX</item>
        <item>VENDIOLA, ERLINDA</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_candelaria_ch_vicemayor">
        <item></item>
        <item>ATIENZA, NATY</item>
        <item>SUAYAN, OGIE</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_tiaong_ch_vicemayor">
        <item></item>
        <item>RAZON, WILLIAM</item>
        <item>UMALI, DICK</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_dolores_ch_vicemayor">
        <item></item>
        <item>AMAT, DANNY</item>
        <item>MENDOZA, PEPAY</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_sanantonio_ch_vicemayor">
        <item></item>
        <item>PILLERBA, ALVIN</item>
        <item>VESLINO, JAY</item>
        <item>Indefinite</item>
    </string-array>
    <string-array name="QuezProv_ch_bokal">
        <item>ALCALA, EMING</item>
        <item>ALEJANDRINO, BOYET</item>
        <item>CASULLA, ROGER</item>
        <item>GONZALES, TEDDY</item>
        <item>LIWANAG, YNA</item>
        <item>SIO, BETH</item>
        <item>TALAGA, MANO</item>
        <item>TANADA, MICHAEL</item>
    </string-array>
    <string-array name="barangay_leader">
        <item>Juan De Lacruz</item>
        <item>Pedro San Juan</item>
        <item>Sam Smith</item>
        <item>Jason Perez</item>
        <item>Karl Santos</item>
        <item>Mark James</item>
        <item>Luffy Raygar</item>
        <item>John Snow</item>
        <item>Daenerys Targaryan</item>
        <item>Lebron Curry</item>
    </string-array>
    <string-array name="Highest_education">
        <item></item>
        <item>Elementary level</item>
        <item>Elementary graduate</item>
        <item>High Schoool level</item>
        <item>High Schoool graduate</item>
        <item>College level</item>
        <item>College graduate</item>
        <item>Post graduate</item>
    </string-array>
    <string-array name="Annual_income">
        <item></item>
        <item>(7,890 monthly or less)</item>
        <item>(7,891 to 15,780 monthly)</item>
        <item>(15,781 to 31,560 monthly)</item>
        <item>(31,561 to 78,900 monthly)</item>
        <item>(78,901 to 118,350 monthly)</item>
        <item>(118,351 to 157,800)</item>
        <item>(157,801 and more)</item>
    </string-array>
    <string-array name="cost_of_service">
        <item></item>
        <item>300 and below</item>
        <item>301 to 500</item>
        <item>501 to 1,000</item>
        <item>1,001 to 2,500</item>
        <item>2,500 to 5,000</item>
        <item>More than 5,000</item>
    </string-array>
    <string-array name="registered_voter">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="email_extension">
        <item></item>
        <item>\@yahoo.com</item>
        <item>\@gmail.com</item>
        <item>\@outlook.com</item>
        <item>\@inbox.com</item>
        <item>\@icloud.com</item>
    </string-array>
    <string-array name="service">
        <item>SERVICE 1</item>
        <item>SERVICE 2</item>
        <item>SERVICE 3</item>
        <item>SERVICE 4</item>
    </string-array>
</resources>