<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataManagement">

    <Button
        android:id="@+id/dmhome_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#1da751"
        android:text="@string/home"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/upload_menu"
        style="@android:style/Widget.DeviceDefault.Light.Button.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/upload_data"
        android:drawableLeft="@drawable/uploaddataicon"
        android:onClick="onButtonClick"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="36dp"
        android:paddingBottom="16dp"
        android:text="@string/upload_data_menu"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/download_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/batch_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/new_batch"
        android:drawableLeft="@drawable/newbatch"
        android:onClick="onButtonClick"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="36dp"
        android:paddingBottom="16dp"
        android:text="@string/download_batch_file"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/canvass_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_menu" />

    <Button
        android:id="@+id/canvass_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/canvass_menu"
        android:drawableLeft="@drawable/endcanvassing"
        android:onClick="onButtonClick"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="36dp"
        android:paddingBottom="16dp"
        android:text="@string/end_canvassing"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dmhome_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/batch_menu" />

    <Button
        android:id="@+id/download_menu"
        style="@android:style/Widget.DeviceDefault.Light.Button.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/download_menu"
        android:drawableLeft="@drawable/downloaddata"
        android:onClick="onButtonClick"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="36dp"
        android:paddingBottom="16dp"
        android:text="@string/download_data_menu"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/batch_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_menu" />
</android.support.constraint.ConstraintLayout>